# fastapi-todo-app

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  web_server.py
alembic/versions/: 7d98437b9907_create_tables.py  cfdf261191fb_add_role_column_to_users_table.py
app/: main.py
app/api/: __init__.py
app/api/middlewares/: authentication.py  exception_handlers.py
app/api/v1/: __init__.py  auth.py  items.py  users.py
app/api/v1/presenters/: items.py  users.py
app/api/v1/requests/: items.py  users.py
app/exceptions/: cmd_exception.py
app/models/: item.py  user.py
app/services/: auth.py  items.py  users.py
config/: config.py  database.py
constants/: __init__.py
database/: schema.sql
locales/: __init__.py
locales/errors/: en.json  ja.json
locales/validations/: en.json  ja.json
logger/: __init__.py
utils/: response.py  utils.py
